src/routes/style.css
/* ... */
#nav{
    background-color: var(--accent-color);
    padding: clamp(2rem, 2vw, 4rem) clamp(1rem, 3vw, 4rem);
    /* margin-top: 50px; */
    z-index: 2;
    justify-content: space-between;
    display: flex;

    #akiss-logo{
        display: inline-block;
        position: relative;
    }

    #akiss-logo-img{
        width: clamp(100%, 100%, 120%);
        height: auto;
        display: block;
    }

    #nav-hairpin-logo{
        position: absolute;
        width: 25%;

        right: 15%;
        bottom: 3%;
    }

    #kessoku-logo{
        align-self: flex-end;
        justify-self: flex-end;
        mix-blend-mode: plus-lighter;
    }
    #nav-menu-wrap{
        display: flex;
        align-items: center;
        gap: clamp(1rem, 1.2vw + 1rem, 2rem);

        font-family: 'Cooper Hewitt';
        font-weight: 900;

        .nav-menu-ctn{
            color: white;
            text-decoration: none;
            font-size: clamp(0.8rem, 1.2vw, 4rem);
        }

    }

    border-bottom: #FFFFFF 1px solid;
}

#recent-project-ctn{
    background-color: var(--accent-color);
    padding: clamp(2rem, 3vw, 5rem);
    font-family: 'Cooper Hewitt';
    font-weight: 800;
    color: white;
    font-size: clamp(1.3rem, 1.4vw, 2rem);

    display: flex;
    flex-direction: column;
    gap: 30px;

    #project-ctn-wrap{
        display: flex;
        flex-direction: column;

        .project-ctn{
            display: flex;
            flex-direction: column;
        }

        .project-name{
            padding: 15px 30px;
            border: #FFFFFF 1px solid;
            font-weight: 600;
            font-size: clamp(1rem, 1.3vw, 2rem);
        }

        .project-info-ctn{
            background-color: var(--primary-bg-color);
            display: none;
            justify-content: space-between;
            height: 0;
            .info-ctn-sec{
                padding: 50px;
                width: 33%;
                color: var(--accent-color);
                font-size: medium;
                font-weight: 500;

            }
        }

        div + div .project-name{
            border-top: 0px;
        }
    }
    padding-bottom: 50px;
}

#recent-post-ctn{
    position: relative;
    padding: clamp(2rem, 3vw, 5rem);
    font-family: 'Cooper Hewitt';
    font-weight: 800;
    display: flex;
    flex-direction: column;
    gap: 30px;

    #recent-post-head{
        font-size: clamp(1.3rem, 1.4vw, 2rem);
        color: var(--accent-color);
    }
}

#recent-post-ctn::before{
    content: "";

    position: absolute;
    top: -10px;
    overflow-x: hidden;
    overflow-y: hidden;

    z-index:-2;
    width: 120%;
    height: 120%;

    background-image: url("/background-overlays/pixel-grain-1.svg");
    background-repeat: no-repeat;
    background-size: cover;
    pointer-events: none;

    /* background-color: rgba(255, 255, 255, 0.1);
    background-blend-mode: lighten;

    opacity: 0.80; */
}

#all-post-ctn{
    display:grid;
    grid-template-columns: repeat(auto-fit, minmax(min(100%, 250px), 1fr));
}

.post-ctn{
    display: flex;
    flex-direction: column;
    flex: 1;
    border: 1px solid var(--accent-color);
    .post-img{
        height: 300px;
        background-color: var(--primary-bg-color);
    }
    .post-title{
        padding: 20px;
        background-color: var(--accent-color);
        color: white;
        font-weight: 500;
        font-size: clamp(1.3rem, 1.3vw, 2rem);;
    }
}

.post-ctn + .post-ctn{
    border-left: 0;
}

#spotlight-ctn{
    padding: clamp(2rem, 3vw, 5rem);
    margin-bottom: 30px;
    padding-top: 10px;
    font-family: 'Cooper Hewitt';
    font-weight: 800;

    display: flex;
    flex-direction: column;
    gap: 30px;

    #light-head{
        color: var(--accent-color);
        font-size: 24px;
    }
}

#light-sub-ctn{
    border: 1px solid var(--accent-color);
    display: flex;

    #img-ctn{
        height: auto;
        background-color: var(--primary-bg-color);
    }

    #light-txt-ctn{
        display: flex;
        flex-direction: column;
        background-color: var(--accent-color);
        padding: 50px;

        gap: 30px;
    }

    #light-txt-head{
        font-size: 22px;
        font-weight: 800;
        color: #FFFFFF;
    }

    #light-txt-desc{
        font-weight: 500;
        color: white;
        font-size: 20px;
    }
}


#footer{
    background-color: var(--accent-color);
    padding: clamp(5rem, 10vw, 16rem);
    padding-bottom: 150px;
    display: flex;
    align-items: center;
    flex-direction: column;
    gap: 10px;

    background-image: url("/background-overlays/line-grain.svg");

    font-family: "Arima";
    font-optical-sizing: auto;
    color: white;

    #footer-wrap{
        display: flex;
        flex-direction: column;
        width: fit-content;
        gap: 10px;
    }

    #kural-tamil-text{
        font-weight: 500;
        line-height: 2ch;
        font-size: clamp(2rem, 3vw, 5rem);
    }

    #kural-eng-text{
        font-weight: 200;
        font-size: clamp(1rem, 1vw, 2.5rem);
        position: relative;
    }

    #kural-num{
        align-self: flex-end;
        font-weight: 200;
        font-size: 18px;
    }
}
/* ... */

